# fastapi-odmantic-realworld-example

./: .gitmodules  .pre-commit-config.yaml  README.md  compose.yaml  dockerfile  dockerfile.dev  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  realworld-tests.yml  tests.yml
scripts/: setup.sh  start-mongo.sh  start.sh  stop-mongo.sh  test.sh
src/: api.py  models.py  settings.py
src/core/: article.py  comment.py  exceptions.py  tag.py  user.py
src/endpoints/: article.py  comment.py  profile.py  tag.py  user.py
src/models/: article.py  tag.py  user.py
src/schemas/: article.py  base.py  comment.py  tag.py  user.py
src/utils/: security.py
tests/integration/: Dockerfile
